fix progressbar height and gap

--- a/app/components/_shared/progress-bar/progress-bar.module.scss
+++ b/app/components/_shared/progress-bar/progress-bar.module.scss
@@ -11,12 +11,12 @@
   font-style: normal;
   font-weight: 400;
   line-height: 22px;
-
+  
   .progress_bar {
     border-radius: $border-radius * 3;
-    height: $theme-unit * 3;
     border: 1px solid var(--theme-progress-border);
     width: 100%;
+    height: 8px;
     display: flex;
 
     .value {
