--- a/app/components/proposals-list/proposals-list.module.scss
+++ b/app/components/proposals-list/proposals-list.module.scss
@@ -78,7 +78,7 @@
         .progress_bar {
           max-width: 110px;
           margin: 0 auto;
-          gap: $theme-unit * 2;
+          gap: 12px;
           width: 100%;
         }
       }
